# edisk-L1489IRS

./: .gdriveignore  .gitignore  JvM_correction.py  L1489IRS_cont_imfit.estimates  L1489IRS_continuum_SB.py  L1489IRS_continuum_SBLB.py  L1489IRS_spectral_line_SBLB_DDT.py  Pipfile  README.md  SLAM_examine.ipynb  SLAM_resolution_test.ipynb  analysis.ipynb  analysis_12CO.ipynb  analysis_continuum.ipynb  analysis_utils.py  analytic_models.py  channelmap_SO_C18O.ipynb  channelmap_fit_C18O.ipynb  channelmap_fit_C18O.py  channelmap_fit_SO.ipynb  channelmap_inspection.ipynb  check_archival_DDT_discrepancy.ipynb  compare_continuum_images.ipynb  continuum_analysis.ipynb  download_from_sftp.py  eDisk_source_dict.py  eDiskplot.py  emission_surface.ipynb  figure_for_paper.ipynb  figure_for_slides.ipynb  fileio.py  fit_continuum_image.py  fit_continuum_radial_profile.py  fit_rotationmap.ipynb  fits_xarray.py  galario_fit_tips.ipynb  generate_moment_maps.py  generic_continuum_SB_commented_in_telecon210907.py  image_statistics.html  imaging_trial1.ipynb  (+41 more)
archival_script/: fits_xarray.py  image_statistics.ipynb  plot_continuum_images_for_Ohashi_san.py  tryout_plotly.py
data_reduction_new_DDT_data/: L1489IRS_continuum_SB.py  L1489IRS_continuum_SBLB.py  L1489IRS_spectral_line_SB.py  L1489IRS_spectral_line_SBLB.py
data_reduction_trial/: L1489IRS_continuum_SBLB_DDT.py  L1489IRS_continuum_SB_DDT.py  L1489IRS_reimaging_spectral_line_SBLB.py  L1489IRS_spectral_line_SB_DDT.py  data_reduction_note.ipynb  eDisk_Data_Reduction_Workflow.docx  reduction_procedure.ipynb  reduction_utils3.py
initial_imaging_trial/: BHR71_IRS1.pickle  BHR71_IRS1_continuum_SB.py  L1489IRS.pickle
(+2 files in other folders)
